--- a/labs/Labs 1 - Pandas/session 1 _ compulsory/AirQuality_Project.ipynb
+++ b/labs/Labs 1 - Pandas/session 1 _ compulsory/AirQuality_Project.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 106,
       "metadata": {
         "id": "oHEuySp1UfEn"
       },
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 107,
       "metadata": {
         "id": "3SpGMQx4UfEt"
       },
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 108,
       "metadata": {
         "id": "nHFdWDQ7UfEv"
       },
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 109,
       "metadata": {
         "id": "rz3D7gOsUfEw",
         "outputId": "57e8d6e2-9b4a-4b2c-82f1-9709373fa6d4"
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 110,
       "metadata": {
         "id": "QCBaI2OXUfEx",
         "outputId": "1f2a6d1c-e94f-409e-a46b-4a45b18c5d48"
@@ -208,7 +208,7 @@
               "4      AE                 NaN                 NaN   51901          2"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 110,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -237,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 111,
       "metadata": {
         "id": "dcHBmkOQUfEz",
         "outputId": "20011353-2a85-4a34-b576-a7b9a0c7af26"
@@ -278,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 112,
       "metadata": {
         "id": "dKaEX7sfUfEz",
         "outputId": "adf74b0a-a1e5-4d56-cd5d-b071262aacc9"
@@ -366,7 +366,7 @@
               "max    1.955096e+07   174.000000"
             ]
           },
-          "execution_count": 46,
+          "execution_count": 112,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -386,7 +386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 113,
       "metadata": {
         "id": "7myfWLvzUfE0",
         "outputId": "15b1600f-9968-4d32-d1bb-b4636ded3bc4"
@@ -474,7 +474,7 @@
               "max    1.955096e+07   174.000000"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 113,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -494,7 +494,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 114,
       "metadata": {
         "id": "2o20TsDqUfE1",
         "outputId": "de913a2d-a93c-4d14-ba04-215a1592c177"
@@ -652,7 +652,7 @@
               "[115 rows x 5 columns]"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 114,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -674,7 +674,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 115,
       "metadata": {
         "id": "YGLSIXWvUfE2"
       },
@@ -725,7 +725,7 @@
               "996      ES  Zaragoza  Zaragoza  529603         10"
             ]
           },
-          "execution_count": 49,
+          "execution_count": 115,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -746,7 +746,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 116,
       "metadata": {
         "id": "UW6OxZNYUfE2",
         "outputId": "a2b6f760-c8f1-4e06-e083-7cf7d9495371"
@@ -798,7 +798,7 @@
               "899      ES  Barcelona  Barcelona  1538814         45"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 116,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -836,7 +836,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 117,
       "metadata": {
         "id": "In2A3HtIUfE3"
       },
@@ -847,7 +847,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 118,
       "metadata": {
         "id": "K3QvqcAqUfE3",
         "outputId": "d7d76268-e3a6-4d18-ea3e-7dac2f1a68f3"
@@ -890,7 +890,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 119,
       "metadata": {
         "id": "7oAzRXsKUfE4",
         "outputId": "65f61e31-a434-4ed2-c26f-2da85ae2d23b"
@@ -1085,7 +1085,7 @@
               "4                1.97489              41.45077  "
             ]
           },
-          "execution_count": 53,
+          "execution_count": 119,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1105,7 +1105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 120,
       "metadata": {
         "id": "B7-rRHi2UfE5"
       },
@@ -1225,7 +1225,7 @@
               "12                2.10141              41.56118  "
             ]
           },
-          "execution_count": 55,
+          "execution_count": 120,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1246,7 +1246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 121,
       "metadata": {
         "id": "T1-9DTlPUfE5"
       },
@@ -1300,7 +1300,7 @@
               "12  ES1262A  ['no2', 'o3']  31404"
             ]
           },
-          "execution_count": 63,
+          "execution_count": 121,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1332,7 +1332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 122,
       "metadata": {
         "id": "4xV1O3xSUfE6",
         "outputId": "f7ec69eb-3552-41f7-d5e9-f5a266b8a10f"
@@ -1369,7 +1369,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 123,
       "metadata": {
         "id": "K5a4OepFUfE6",
         "outputId": "88a76bc6-f9bc-4bec-9b50-4135306efd75"
@@ -1510,7 +1510,7 @@
               "2021-01-30 20:00:00             41.426077               2.147992  "
             ]
           },
-          "execution_count": 18,
+          "execution_count": 123,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1530,7 +1530,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 124,
       "metadata": {
         "id": "8jAUXTulUfE7",
         "outputId": "0f12c5fc-c947-4b5e-9173-1a1b7b524bea"
@@ -2080,7 +2080,7 @@
               "ES2012A   247.0  22.943320  14.038160   2.0  11.500  21.0  32.000   65.0"
             ]
           },
-          "execution_count": 64,
+          "execution_count": 124,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2132,7 +2132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 125,
       "metadata": {
         "id": "xa-Je9ICUfE7",
         "outputId": "846524fa-38af-426d-ed0d-054e47f219f2"
@@ -2168,7 +2168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 126,
       "metadata": {
         "id": "KWPupJiZUfE8",
         "outputId": "1ef73767-a517-4bfb-9f39-30406a5cbd5f"
@@ -2309,7 +2309,7 @@
               "2021-01-30 19:00:00             41.476769               2.088977  "
             ]
           },
-          "execution_count": 21,
+          "execution_count": 126,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2329,7 +2329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 127,
       "metadata": {
         "id": "VfRVNirxUfE8",
         "outputId": "6a7a2a93-274b-482a-fec0-a7a00d6c8b82"
@@ -2341,7 +2341,7 @@
               "<Axes: xlabel='date.utc'>"
             ]
           },
-          "execution_count": 73,
+          "execution_count": 127,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -2371,7 +2371,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 128,
       "metadata": {
         "id": "--y1VLbQUfE8"
       },
@@ -2385,7 +2385,7 @@
               "dtype: object"
             ]
           },
-          "execution_count": 75,
+          "execution_count": 128,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -2440,7 +2440,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 132,
       "metadata": {
         "id": "OqQX1w8GUfE9"
       },
@@ -2462,12 +2462,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 133,
       "metadata": {
         "id": "RH5L9FBdUfE9",
         "outputId": "83324f0e-f210-4123-a4d6-49db42dc16f7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "AttributeError",
+          "evalue": "'OpenAQ' object has no attribute 'cities'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[133], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m cities \u001b[38;5;241m=\u001b[39m \u001b[43mapi\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcities\u001b[49m(df \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m, limit \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10000\u001b[39m)\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'OpenAQ' object has no attribute 'cities'"
+          ]
+        }
+      ],
       "source": [
         "cities = api.cities(df = True, limit = 10000)"
       ]
@@ -2483,11 +2495,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 134,
       "metadata": {
         "id": "TUDaXVLeUfE-"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "TypeError",
+          "evalue": "'Locations' object is not callable",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[134], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m BCN_Locations \u001b[38;5;241m=\u001b[39m \u001b[43mapi\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlocations\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcity\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mBarcelona\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m ES_Locations \u001b[38;5;241m=\u001b[39m api\u001b[38;5;241m.\u001b[39mlocations(country\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mES\u001b[39m\u001b[38;5;124m'\u001b[39m, df\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, limit\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10000\u001b[39m)\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'Locations' object is not callable"
+          ]
+        }
+      ],
       "source": [
         "BCN_Locations = api.locations(city='Barcelona', df=True)\n",
         "ES_Locations = api.locations(country='ES', df=True, limit=10000)"
@@ -2504,11 +2528,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 135,
       "metadata": {
         "id": "FYj3iY3IUfE-"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "TypeError",
+          "evalue": "'Measurements' object is not callable",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[135], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m BCN_MeasurementsNO2 \u001b[38;5;241m=\u001b[39m \u001b[43mapi\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmeasurements\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcity\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mBarcelona\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparameter\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mno2\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlimit\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10000\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m BCN_MeasurementsO3 \u001b[38;5;241m=\u001b[39m api\u001b[38;5;241m.\u001b[39mmeasurements(city\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBarcelona\u001b[39m\u001b[38;5;124m'\u001b[39m, parameter\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mo3\u001b[39m\u001b[38;5;124m'\u001b[39m, limit\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10000\u001b[39m, df\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'Measurements' object is not callable"
+          ]
+        }
+      ],
       "source": [
         "BCN_MeasurementsNO2 = api.measurements(city='Barcelona', parameter='no2', limit=10000, df=True)\n",
         "BCN_MeasurementsO3 = api.measurements(city='Barcelona', parameter='o3', limit=10000, df=True)"
