--- a/labs/Labs 4 - PCA/Problemas4_2023-2024.ipynb
+++ b/labs/Labs 4 - PCA/Problemas4_2023-2024.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "id": "O-9icMpFnmVS",
     "outputId": "fdd1476c-018b-4afe-dd9a-41c733c62992"
@@ -312,10 +312,10 @@
     "varExplained3 = val[2] / sum(val)\n",
     "varExplainedSum = varExplained1 + varExplained2 + varExplained3\n",
     "\n",
-    "print(\"The first principal component explains {0} of variance\".format('%.7f' % varExplained))\n",
-    "print(\"The second principal component explains {0:.7f} of variance\".format(varExplained2))\n",
-    "print(\"The third principal component explains {0:.7f} of variance\".format(varExplained3))\n",
-    "print(\"The first three principal components explain {0:.7f} of variance in total\".format(varExplainedSum))\n"
+    "print(\"The first principal component:        {0:.7f}\".format(varExplained))\n",
+    "print(\"The second principal component:       {0:.7f}\".format(varExplained2))\n",
+    "print(\"The third principal component:        {0:.7f}\".format(varExplained3))\n",
+    "print(\"All first three principal components: {0:.7f}\".format(varExplainedSum))\n"
    ]
   },
   {
