labs 5 last touches

--- a/labs/Labs 5 - KNN/Problems_KNN.ipynb
+++ b/labs/Labs 5 - KNN/Problems_KNN.ipynb
@@ -838,25 +838,12 @@
         "### Summary of Findings:\n",
         "\n",
         "1. **Metrics**:\n",
-        "    - Supports various distance metrics like Euclidean (default), Manhattan, Minkowski, or custom metrics.\n",
-        "    - Proper metric selection is crucial, especially with features on different scales.\n",
+        "    - The k-NN algorithm supports multiple distance metrics such as Euclidean (default), Manhattan, Minkowski, and custom metrics.  \n",
+        "    - Selecting an appropriate metric is important, especially when features have varying scales or units. For exaple, Euclidean distance may not work well without normalization.  \n",
         "\n",
-        "2. **Algorithms**:\n",
-        "    - Options include `ball_tree`, `kd_tree`, `brute`, and `auto` (chooses the best one).\n",
-        "    - Algorithm choice affects speed, especially for large datasets.\n",
-        "\n",
-        "3. **Weights**:\n",
-        "    - Options: `uniform` (equal weight), `distance` (closer neighbors matter more), or custom.\n",
-        "    - `distance` weights often improve performance.\n",
-        "\n",
-        "4. **Challenges**:\n",
-        "    - High dimensions can make distances less meaningful (\"curse of dimensionality\").\n",
-        "    - Picking the best `k` requires experimentation.\n",
-        "    - Feature scaling is essential for distance-based metrics.\n",
-        "\n",
-        "5. **Extras**:\n",
-        "    - `n_jobs` enables parallel computation for faster processing.\n",
-        "    - `leaf_size` impacts memory and query time for `ball_tree`/`kd_tree`.\n",
+        "2. **Algorithms**:  \n",
+        "    - The `algorithm` parameter can be set to `ball_tree`, `kd_tree`, `brute`, or `auto`. The `auto` option selects the best algorithm based on the dataset.  \n",
+        "    - The choice of algorithm affects computation time significantly, particularly for large datasets. For example, `kd_tree` and `ball_tree` are efficient for low-dimensional data, while `brute` is better for high-dimensional data.  \n",
         "\n",
         "---\n"
       ]
