--- a/labs/Labs 6 - Info Retrieval/Problems_Info_Retr_Recom_Sys.ipynb
+++ b/labs/Labs 6 - Info Retrieval/Problems_Info_Retr_Recom_Sys.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 65,
       "metadata": {
         "id": "e1jNVMa7Yyac"
       },
@@ -53,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "metadata": {
         "id": "DRf_xA2iYyad",
         "outputId": "d89f749e-7571-4c54-8b0f-ccff13b45881"
@@ -63,7 +63,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "The number of relevant items is: 17\n"
+            "17\n"
           ]
         }
       ],
@@ -83,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 67,
       "metadata": {
         "id": "pXt6OLPvYyaf",
         "outputId": "c7141ea5-220d-4321-d1e7-ad30030f83b7"
@@ -124,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 68,
       "metadata": {
         "id": "6Z3ZxZLDYyag",
         "outputId": "ee2c3cd6-aa1b-4740-b0f9-78472ad35e9b"
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 69,
       "metadata": {
         "id": "VJAKsWaHYyah"
       },
@@ -207,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "metadata": {},
       "outputs": [
         {
@@ -251,7 +251,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "metadata": {
         "id": "Rp5qovb3Yyaj",
         "outputId": "fdef571b-d579-43f9-ae13-0e66503e1961"
@@ -305,7 +305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 72,
       "metadata": {},
       "outputs": [
         {
@@ -352,7 +352,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 73,
       "metadata": {
         "id": "UxEz2cAcYyal"
       },
@@ -363,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 74,
       "metadata": {
         "id": "AF1chc9mYyal",
         "outputId": "c6b0d8a8-3934-4917-fafb-cd01383a375a"
@@ -630,7 +630,7 @@
               "User 9       5.0  "
             ]
           },
-          "execution_count": 28,
+          "execution_count": 74,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -651,7 +651,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 75,
       "metadata": {
         "id": "315D2-YtYyam",
         "outputId": "67596d5d-1feb-43bc-c7b7-dfb400a48f86"
@@ -678,7 +678,7 @@
               "Name: 0, dtype: float64"
             ]
           },
-          "execution_count": 29,
+          "execution_count": 75,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -719,7 +719,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 76,
       "metadata": {
         "id": "4sr2Q13zYyam",
         "outputId": "2f54c8b2-2bcd-4d04-e689-1b1e78cc14d9"
@@ -741,7 +741,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 30,
+          "execution_count": 76,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -766,7 +766,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 77,
       "metadata": {
         "id": "PehIKOovYyan",
         "outputId": "5aa0af3a-1360-4d87-ad2b-45da6c0bf76e"
@@ -788,7 +788,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 31,
+          "execution_count": 77,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -812,7 +812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 78,
       "metadata": {
         "id": "Tbx1N3VYYyan",
         "outputId": "06da5780-3e39-4dcb-ca29-b05014493ea3"
@@ -842,7 +842,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 78,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -872,7 +872,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 79,
       "metadata": {
         "id": "KU3ahXyWYyao",
         "outputId": "52c5c2de-c42a-4aed-8f78-ab3cb445c08e"
@@ -884,7 +884,7 @@
               "Index(['User 3', 'User 2', 'User 9'], dtype='object')"
             ]
           },
-          "execution_count": 33,
+          "execution_count": 79,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -914,7 +914,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 80,
       "metadata": {
         "id": "0B6GoB2zYyao",
         "outputId": "46bc585b-896a-4f84-c7f0-6ce2d26a9877"
@@ -942,18 +942,18 @@
             "\n",
             "The predicted ratings of the target user are: \n",
             " Movie 0     1.000000\n",
-            "Movie 1     1.107035\n",
-            "Movie 2     2.577300\n",
+            "Movie 1          NaN\n",
+            "Movie 2     2.842957\n",
             "Movie 3     2.000000\n",
             "Movie 4     4.000000\n",
-            "Movie 5     0.883737\n",
+            "Movie 5          NaN\n",
             "Movie 6     1.000000\n",
             "Movie 7     4.000000\n",
-            "Movie 8     3.436815\n",
-            "Movie 9     1.369908\n",
-            "Movie 10    4.348525\n",
-            "Movie 11    2.796355\n",
-            "Movie 12    2.086963\n",
+            "Movie 8          NaN\n",
+            "Movie 9          NaN\n",
+            "Movie 10         NaN\n",
+            "Movie 11         NaN\n",
+            "Movie 12         NaN\n",
             "Movie 13    3.000000\n",
             "Movie 14    5.000000\n",
             "Name: 0, dtype: float64\n"
@@ -999,7 +999,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 81,
       "metadata": {
         "id": "gXAlD-JeYyap"
       },
@@ -1012,7 +1012,7 @@
             "The predicted ratings of the target user are: \n",
             " Movie 0     1.000000\n",
             "Movie 1     1.107035\n",
-            "Movie 2     2.577300\n",
+            "Movie 2     2.842957\n",
             "Movie 3     2.000000\n",
             "Movie 4     4.000000\n",
             "Movie 5     0.883737\n",
